registry/service.yaml
---
# Source: docker-registry/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local
  namespace: registry
  labels:
    app: local
    chart: docker-registry-2.1.0
    release: local
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      protocol: TCP
      name: https-443
      targetPort: 5000
  selector:
    app: local
    release: local
